version 1 fix overflow x

--- a/src/components/page/MainPage.css
+++ b/src/components/page/MainPage.css
@@ -5,7 +5,7 @@
   font-family: "Muli", "Segoe UI", "Roboto", "Helvetica Neue", "Arial",
     "sans-serif", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji";
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .cv-nav-container {
